--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 </div>
 
 <!-- lead image-->
+<div class="leadimage">
+  <div id="text1">
+    <h2>Our Mission</h2>
+    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+  </div>
+</div>
 
 <!--tea of the month section-->
 
