--- a/index.html
+++ b/index.html
@@ -22,21 +22,79 @@
 </div>
 
 <!-- lead image-->
+<div class="main">
 <div class="leadimage">
   <div id="text1">
     <h2>Our Mission</h2>
     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
   </div>
 </div>
-
 <!--tea of the month section-->
+<div class="teaotm">
+  <h2>Tea of the Month</h2>
+  <h4>What's Steeping at The Tea Cozy?</h4>
+  <div class="totmimages">
+    <div class="fall">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="tea cup">
+      <h4>Fall Berry Blitz Tea</h4>
+    </div>
+    <div class="spice">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="tea box">
+      <h4>Spiced Rum Tea</h4>
+    </div>
+    <div class="sea">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
+      <h4>Seasonal Donuts</h4>
+    </div>
+    <div class="myrtle">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
+      <h4>Myrtle Ave Tea</h4>
+    </div>
+    <div class="bed">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="tea cup and sugar">
+      <h4>Bedford Bizarre Tea</h4>
+    </div>
+  </div>
 
+</div>
+</div>
 <!-- Locations section -->
-
+<div class="box">
+  <div class="title">
+  <h1>Locations<h1>
+  </div>
+  <div class="locations">
+    <div class="downtown">
+      <h3>Downtown</h3>
+      <p>384 West 4th St</p>
+      <p>Suite 108</p>
+      <p>Portland, Maine</p>
+    </div>
+    <div class="east">
+      <h3>East Bayside</h3>
+      <p>3433 Phisherman's Avenue</p>
+      <p>(Northwest Corner)</p>
+      <p>Portland, Maine</p>
+    </div>
+    <div class="oak">
+      <h3>Oakdale</h3>
+      <p>515 Crescent Avenue</p>
+      <p>Second Floor</p>
+      <p>Portland, Maine</p>
+    </div>
+  </div>
+</div>
 <!-- contact section -->
+<div class="contact">
+  <h2>The Tea Cozy</h2>
+  <h5>contact@theteacozy.com</h5>
+  <h5>917-555-8904</h5>
+</div>
 
 <!-- footer-->
-
+<div class="footer">
+  <h5>copyright The Tea Cozy 2017</h5>
+</div>
 
   </body>
 </html>
